# meli

./: .gitignore  Makefile  README.md  setup.cfg
.github/workflows/: oferta_relampago.yml
data/processed/: items_titles_sim.csv
notebooks/: failure_prediction.ipynb  oferta_relampago.ipynb  similitud.ipynb
src/meli/: plot.py  text.py  utils.py
