[metadata]
name = meli
author = Adriano Freitas
author_email = agf.adriano@gmail.com
description = Mercado Livre
long_description = file: README.md
long_description_content_type = text/markdown
version = 0.1.0

[options]
package_dir=
    =src
packages = find:
python_requires = >=3.7
install_requires = 
    pandas == 1.4.4
    scikit-learn == 1.1.2

[options.extras_require]
dev = 
    ipykernel

[options.packages.find]
where=src
