[metadata]
name = meli
author = Adriano Freitas
author_email = agf.adriano@gmail.com
description = Mercado Livre
long_description = file: README.md
long_description_content_type = text/markdown
version = 0.1.0

[options]
package_dir=
    =src
packages = find:
python_requires = >=3.7
install_requires = 
    pandas == 1.4.4
    scikit-learn == 1.1.2
    sentence-transformers == 2.2.2
    mlflow == 2.1.1
    xgboost == 1.7.0
    tensorflow == 2.11.0
    nltk == 3.8.1

[options.extras_require]
dev = 
    ipykernel == 6.21.2
    matplotlib == 3.5.3
    seaborn == 0.11.2
    shap == 0.41.0
    missingno == 0.5.1
    hyperopt == 0.2.7

[options.packages.find]
where=src
